[package]
name = "pm"
version = "0.1.0"
authors = ["Tomas Farias <tomasfariassantana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
shellexpand = "1.0"
serde = "1.0"
toml = "0.4.2"
serde_derive = "*"
